fix: update Class.forName instantiation in ConnectionFactory
Updated the instantiation method in the `ConnectionFactory` class, replacing deprecated `.newInstance()` with `.getDeclaredConstructor().newInstance()`. This ensures compatibility with modern Java versions.